# agentix

./: README.md
agentix/: CHANGELOG.md  Cargo.toml
agentix/examples/: 12_server_anthropic.rs  13_codex_agent_multiturn.rs
agentix/examples/14_admin_relay/: admin.rs  aggregate.rs  auth.rs  dashboard.html  main.rs  me.html  me.rs  pricing.rs  routes.rs  tokens.rs
agentix/src/: agent.rs  config.rs  lib.rs  msg.rs  request.rs
agentix/src/raw/: mod.rs
agentix/src/raw/anthropic/: mod.rs  request.rs  response.rs
agentix/src/raw/claude_code/: mod.rs  proxy.rs  replay.rs  session.rs
agentix/src/raw/codex/: mod.rs
agentix/src/raw/deepseek/: request.rs
agentix/src/raw/gemini/: request.rs
agentix/src/raw/glm/: request.rs
agentix/src/raw/grok/: request.rs
agentix/src/raw/kimi/: request.rs
agentix/src/raw/mimo/: mod.rs  request.rs  response.rs
agentix/src/raw/openai/: request.rs
agentix/src/raw/openrouter/: request.rs
agentix/src/raw/supercloud/: mod.rs  request.rs  response.rs
agentix/src/server/: fallback.rs  mod.rs  translated.rs  usage.rs
agentix/src/server/admin/: auth.rs  dashboard.html  mod.rs  tokens.rs
agentix/src/server/anthropic/: error.rs  fallback.rs  inbound.rs  mod.rs  outbound.rs
agentix/src/server/openai_chat/: error.rs  inbound.rs  mod.rs  outbound.rs  wire.rs
agentix/src/server/openai_responses/: error.rs  inbound.rs  mod.rs  outbound.rs  store.rs  wire.rs
agentix/tests/: llm_client.rs  provider_integration.rs  readme_examples.rs  server_anthropic.rs  smoke_mimo.rs
