[package]
name = "agentix"
version = "0.27.0"
edition = "2024"
description = "Multi-provider LLM client for Rust — streaming, non-streaming, tool calls, MCP, DeepSeek, OpenAI, Anthropic, Gemini, Codex"
authors = ["ozongzi <ozongzi@icloud.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ozongzi/agentix"
readme = "../README.md"
keywords = ["llm", "agent", "ai", "deepseek", "openai"]
categories = ["api-bindings", "web-programming"]

[features]
sensitive-logs = []
mcp = [
    "dep:rmcp",
    "rmcp/client",
    "rmcp/transport-child-process",
    "rmcp/transport-streamable-http-client-reqwest",
]
mcp-server = [
    "dep:rmcp",
    "rmcp/server",
    "rmcp/transport-io",
    "rmcp/transport-streamable-http-server",
    "dep:axum",
    "dep:base64",
]
claude-code = [
    "mcp-server",
    # Reuse the Anthropic wire-format response constructors
    # (`server::anthropic::outbound`) to render the proxy's faked SSE.
    "server-anthropic",
    "dep:uuid",
    # Intercepting MITM proxy used to replay tool-loop history into the CLI as a
    # single continuous session (fixes prompt-cache collapse, see CHANGELOG).
    "dep:rcgen",
    "dep:hudsucker",
    "dep:http-body-util",
    "dep:bytes",
    "dep:tower-service",
    "dep:webpki-roots",
    "dep:tokio-rustls",
]
codex = []
server-anthropic = ["dep:axum"]
server-openai-chat = ["dep:axum"]
server-openai-responses = ["dep:axum"]
cli = [
    "server-anthropic",
    "server-openai-chat",
    "server-openai-responses",
    "claude-code",
    "codex",
    "dep:tracing-subscriber",
    "dep:toml",
]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
agentix-macros = { version = "0.5.1", path = "../agentix-macros" }
eventsource-stream = "0.2.3"
futures = "0.3.31"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "1.0"
tiktoken-rs = "0.6"

# Tracing for observability and diagnostics
tracing = "0.1"

# Optional: MCP (Model Context Protocol) client / server support
rmcp = { version = "1.1", optional = true }

# Optional: HTTP server for mcp-server / server-anthropic features
axum = { version = "0.8", optional = true, default-features = false, features = ["http1", "tokio", "json"] }

# Optional: base64 encoding for fetched-URL images on mcp-server output
base64 = { version = "0.22", optional = true }
tokio-util = { version = "0.7.18", features = ["net"] }

# Optional: UUID generation for Claude Code session files
uuid = { version = "1", optional = true, features = ["v4"] }

# Optional: Claude Code intercepting MITM proxy (history replay → prompt-cache fix).
# `hudsucker` provides the CONNECT/TLS-MITM plumbing (built on the same
# hyper/rustls/rcgen stack reqwest already pulls in); we only supply the
# request/response replay handler and reuse `server::anthropic::outbound` to
# render the faked Anthropic SSE.
rcgen = { version = "0.13", optional = true }
hudsucker = { version = "0.23", optional = true, default-features = false, features = ["rcgen-ca", "rustls-client"] }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
tower-service = { version = "0.3", optional = true }
webpki-roots = { version = "0.26", optional = true }
tokio-rustls = { version = "0.26", optional = true }

# Optional: tracing subscriber for the CLI binary
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], optional = true }

# Optional: TOML parsing for aaagw --config
toml = { version = "0.8", optional = true }

[[example]]
name = "10_claude_code"
required-features = ["claude-code"]

[[example]]
name = "12_server_anthropic"
required-features = ["server-anthropic"]

[[example]]
name = "13_codex_agent_multiturn"
required-features = ["codex"]

[[example]]
name = "14_admin_relay"
path = "examples/14_admin_relay/main.rs"
required-features = ["server-anthropic", "server-openai-chat", "server-openai-responses", "claude-code", "codex"]

[[bin]]
name = "aaagw"
path = "src/bin/aaagw.rs"
required-features = ["cli"]

[dev-dependencies]
axum = { version = "0.8", features = ["http1", "tokio"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
# Used only by examples/14_admin_relay.
base64 = "0.22"
toml = "0.8"
# Used only by the claude-code replay proxy integration test (TLS client that
# trusts the proxy's throwaway CA and speaks CONNECT).
tokio-rustls = "0.26"
rustls-pemfile = "2"
